--- a/student_management_app/templates/login_page.html
+++ b/student_management_app/templates/login_page.html
@@ -21,15 +21,21 @@
 }
 
 body{
-  height:1000px;
   background: #0FC5D4;
     }
 
+.container{
+  width: 100vh;
+  height: 100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
 .login-dark {
-  width: 20%;
   display: flex;
   flex-direction: column;
-  justify-items: center;
+  justify-content: center;
   background-color: white;
   border-radius: 20px;
   box-shadow: 0px -1px 18px 5px rgba(0, 0, 0, 0.25);
@@ -73,22 +79,34 @@ body{
 </head>
 
 
-<div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4">
-	
-	<form action="{% url 'doLogin' %}" method="get">
-		{% csrf_token %}
-		<h1 class="text-center">Login</h1>
-		<hr>
-		<div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-		
-		
-		<div class="form-group"><input class="form-control mb-2" type="email" name="email" placeholder="Email"></div>
-		<div class="form-group"><input class="form-control mb-2" type="password" name="password" placeholder="Password"></div>
-		
-		
-		<div class="form-group"><button class="btn btn-primary btn-block mb-2 ml-2" type="submit">Log In</button></div>
-		<a href="/registration" class="forgot">Not Registered Yet? Register Now</a>
-	</form>
+<div class="container">
+  <div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4">
+  
+    <form action="{% url 'doLogin' %}" method="get">
+      {% csrf_token %}
+      <div><img src="{% static 'dist/img/Pramukh_Classes.png' %}" alt="logo"></div>
+      <hr>
+  
+  
+      <div class="form-group">
+        <div class="input-group-prepend">
+          <div class="input-group-text"><img src="{% static 'dist/img/person.svg' %}"  alt=""></div>
+        </div>
+        <input class="form-control mb-2" type="email" name="email" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <img src="{% static 'dist/img/key.svg' %}" alt="">
+        <input class="form-control mb-2" type="password" name="password" placeholder="Password">
+      </div>
+  
+  
+      <div class="form-group"><button class="btn btn-primary btn-block mb-2 ml-2" type="submit">Log In</button></div>
+      <a href="/registration" class="forgot">Not Registered Yet? Register Now</a>
+    </form>
+  </div>
+  <div>
+    <img src="{% static 'dist/img/Reading-student.svg' %}" alt="" height="400px">
+  </div>
 </div>
 {% comment %} Display Messages {% endcomment %}
 {% if messages %}
