--- a/student_management_app/templates/hod_template/sidebar_template.html
+++ b/student_management_app/templates/hod_template/sidebar_template.html
@@ -3,9 +3,9 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="{% url 'admin_home' %}" class="brand-link">
-        <img src="{% static 'dist/img/jecrc_logo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3 ml-5"
+        <img src="{% static 'dist/img/Pramukh_Classes.png' %}" alt="AdminLTE Logo" class="brand-image bg-light rounded elevation-2 ml-5"
             style="opacity: .8">
-        <span class="brand-text font-weight-light">Pramukh Classes</span>
+        <span class="brand-text font-weight-light">Admin</span>
       </a>
 
       <!-- Sidebar -->
@@ -15,7 +15,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="{% static 'dist/img/logo.png' %}" class="img-circle elevation-2 ml-5" alt="User Image" style="max-width:100%;">
+            <img src="{% static 'dist/img/logo.png' %}" class="rounded elevation-2 ml-5" alt="User Image" style="max-width:100%;">
           </div>
           <div class="info">
             <a href="{% url 'admin_profile' %}" class="d-block">{{ user.first_name }} {{ user.last_name }}</a>
