--- a/student_management_app/templates/login_page.html
+++ b/student_management_app/templates/login_page.html
@@ -37,40 +37,16 @@ body{
   flex-direction: column;
   justify-content: center;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 30px;
   box-shadow: 0px -1px 18px 5px rgba(0, 0, 0, 0.25);
 }
 
-.login-dark form {
-
+.login-dark form .forgot small{
+  color:#6d7575
 }
 
-.login-dark .illustration {
-
-}
-
-.login-dark form .form-control {
-
-}
-
-.login-dark form .btn-primary {
-
-}
-
-.login-dark form .btn-primary:hover, .login-dark form .btn-primary:active {
-
-}
-
-.login-dark form .forgot {
-
-}
-
-.login-dark form .forgot:hover, .login-dark form .forgot:active {
-
-}
-
-.login-dark form .btn-primary:active {
-
+.forgot:hover{
+  text-decoration: none;
 }
 
 </style>
@@ -80,28 +56,48 @@ body{
 
 
 <div class="container">
-  <div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4">
-  
+  <!-- container -->
+  <div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4 pb-3 ">
+    <!-- form starts here -->
     <form action="{% url 'doLogin' %}" method="get">
       {% csrf_token %}
-      <div><img src="{% static 'dist/img/Pramukh_Classes.png' %}" alt="logo"></div>
-      <hr>
-  
-  
-      <div class="form-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text"><img src="{% static 'dist/img/person.svg' %}"  alt=""></div>
+      <div class="mb-3"><img src="{% static 'dist/img/Pramukh_Classes.png' %}" alt="logo"></div>
+      <hr class="mb-3">
+      
+      <!-- Email -->
+      <div class="form-group mb-3">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/person.svg' %}" alt=""></div>
+          </div>
+          <input class="form-control mb-2" type="email" name="email" placeholder="Email">
         </div>
-        <input class="form-control mb-2" type="email" name="email" placeholder="Email">
       </div>
-      <div class="form-group">
-        <img src="{% static 'dist/img/key.svg' %}" alt="">
-        <input class="form-control mb-2" type="password" name="password" placeholder="Password">
+      <!-- Password -->
+      <div class="form-group mb-3">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/key.svg' %}" alt=""></div>
+          </div>
+          <input class="form-control mb-2" type="password" name="password" placeholder="Password">
+        </div>
       </div>
-  
-  
-      <div class="form-group"><button class="btn btn-primary btn-block mb-2 ml-2" type="submit">Log In</button></div>
-      <a href="/registration" class="forgot">Not Registered Yet? Register Now</a>
+      <!-- Forgot Regestration -->
+      <div class="regestration mb-3 d-flex justify-content-center align-items-center">
+        <a href="/registration" class="forgot"><small>Not Registered Yet? </small>
+          <b>Register Now</b>
+        </a>
+      </div>
+      <!-- Login button -->
+      <div class="form-group mb-3 d-flex justify-content-center">
+        <div class="input-group input-group-lg">
+          <button class="btn btn-primary btn-block mb-2 ml-2 pr-4 pl-4" type="submit">
+            <img src="{% static 'dist/img/auth-logo.svg' %}" alt="">
+          Log In
+                </button>
+        </div>
+      </div>
+     
     </form>
   </div>
   <div>
@@ -132,7 +128,5 @@ body{
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-
 
 {% endblock content %}
