--- a/student_management_app/templates/staff_template/sidebar_template.html
+++ b/student_management_app/templates/staff_template/sidebar_template.html
@@ -2,11 +2,12 @@
 
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="{% url 'student_home' %}" class="brand-link">
-        <img src="{% static 'dist/img/jecrc_logo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3 ml-5"
+      <a href="{% url 'admin_home' %}" class="brand-link">
+        <img src="{% static 'dist/img/Pramukh_Classes.png' %}" alt="AdminLTE Logo" class="brand-image bg-light rounded elevation-2 ml-5"
             style="opacity: .8">
-        <span class="brand-text font-weight-light">JECRC</span>
+        <span class="brand-text font-weight-light">Teacher</span>
       </a>
+
 
 
       <!-- Sidebar -->
