--- a/student_management_app/templates/login_page.html
+++ b/student_management_app/templates/login_page.html
@@ -21,7 +21,7 @@
 }
 
 body{
-  background: #0FC5D4;
+  background: #418FAE;
     }
 
 .container{
@@ -115,7 +115,7 @@ body{
 
 	</div> {% endcomment %}
 
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
   <strong>Invalid Login Credentials!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
