--- a/student_management_app/templates/registration.html
+++ b/student_management_app/templates/registration.html
@@ -1,178 +1,201 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block content %}
-
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Untitled</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+  />
+  <link rel="stylesheet" href="assets/css/style.css" />
 
-<style>
-
-body{
-
-  height:1000px;
-                
-                background:#475d62;
-                background-color: cover;
-                font-family: sans-seriff;
-               
-               
-                
-
-               
-
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-.login-dark {
-  max-width:320px;
-  width:90%;
-  background-color: #1e2833;
-  padding:40px;
-  border-radius:4px;
-  transform: translate(-50%,-50%);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  color:#fff;
-  box-shadow:3px 3px 4px rgba(0,0,0,0.2);
-   
+    body {
+      background: #418fae;
+    }
 
+    .container {
+      width: 100vh;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-}
+    .login-dark {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background-color: white;
+      border-radius: 30px;
+      box-shadow: 0px -1px 18px 5px rgba(0, 0, 0, 0.25);
+    }
 
-.login-dark form {
-  max-width:320px;
-  width:90%;
-  background-color:#1e2833;
-  padding:40px;
-  border-radius:4px;
-  transform:translate(-50%, -50%);
-  position:absolute;
-  top:50%;
-  left:50%;
-  color:#fff;
-  box-shadow:3px 3px 4px rgba(0,0,0,0.2);
-}
+    .login-dark form .forgot small {
+      color: #6d7575;
+    }
 
-.login-dark .illustration {
-  text-align:center;
-  padding:15px 0 20px;
-  font-size:100px;
-  color:#2980ef;
-}
+    .forgot:hover {
+      text-decoration: none;
+    }
 
-.login-dark form .form-control {
-  background:none;
-  border:none;
-  border-bottom:1px solid #434a52;
-  border-radius:0;
-  box-shadow:none;
-  outline:none;
-  color:inherit;
-}
-
-.login-dark form .btn-primary {
-  background:#214a80;
-  border:none;
-  border-radius:4px;
-  padding:11px;
-  box-shadow:none;
-  margin-top:26px;
-  text-shadow:none;
-  outline:none;
-}
-
-.login-dark form .btn-primary:hover, .login-dark form .btn-primary:active {
-  background:#214a80;
-  outline:none;
-}
-
-.login-dark form .forgot {
-  display:block;
-  text-align:center;
-  font-size:12px;
-  color:#6f7a85;
-  opacity:0.9;
-  text-decoration:none;
-}
-
-.login-dark form .forgot:hover, .login-dark form .forgot:active {
-  opacity:1;
-  text-decoration:none;
-}
-
-.login-dark form .btn-primary:active {
-  transform:translateY(1px);
-}
-
-</style>
-
-
+    .signup-img img{
+      padding: 100px;
+    }
+  </style>
 </head>
 
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="/ "><h4>BACK TO HOME</h4></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                  
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav mr-auto">
-                      
-                      
-                      </ul>
-                      <form class="form-inline my-2 my-lg-0">
-                       <!-- <input class="form-control mr-sm-2" type="login" placeholder="login" aria-label="login">-->
-                       
-       <!--<input class="form-control mr-sm-2" type="Register" placeholder="Register" aria-label="Register">-->
-     <a href="/login" class="btn btn-outline-success my-1 mx-2">Login Here</a>
-		<a href="/contact" class="btn btn-outline-danger my-1 mx-2">Contact Us</a>
-                         <!--<input class="form-control mr-sm-2" type="register" placeholder="register" aria-label="register">-->
-                     
-                      </form>
-                    </div>
-                  </nav>
+<nav class="navbar navbar-expand-lg">
+  <a class="navbar-brand bg-light rounded-lg" href="/ "
+    ><img
+      height="50px"
+      src="{% static 'dist/img/Pramukh_Classes.png' %}"
+      alt=""
+  /></a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto"></ul>
+    <form class="form-inline my-2 my-lg-0">
+      <!-- <input class="form-control mr-sm-2" type="login" placeholder="login" aria-label="login">-->
 
-    <div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4">
-         <form action="{% url 'doRegistration' %}" method="get">
-			{% csrf_token %}
+      <!--<input class="form-control mr-sm-2" type="Register" placeholder="Register" aria-label="Register">-->
+      <a href="/login" class="btn btn-success my-1 mx-2">Login Here</a>
+      <a href="/contact" class="btn btn-danger my-1 mx-2">Contact Us</a>
+      <!--<input class="form-control mr-sm-2" type="register" placeholder="register" aria-label="register">-->
+    </form>
+  </div>
+</nav>
 
-		<h1 class="text-center">Signup</h1>
-            <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-			 <div class="form-group"><input class="form-control mb-2" type="text" name="first_name" placeholder="First Name"></div>
-            <div class="form-group"><input class="form-control mb-2" type="text" name="last_name" placeholder="Last Name"></div>
+<div class="container">
+  
+  <div class="login-dark form-inline py-0 mx-4 my-4 pl-4 pr-4 d-flex justify-content-center">
+    <form action="{% url 'doRegistration' %}" method="get">
+      {% csrf_token %}
 
-            <div class="form-group"><input class="form-control mb-2" type="email" name="email" placeholder="Email"></div>
-            <div class="form-group"><input class="form-control mb-2" type="password" name="password" placeholder="Password"></div>
-			<div class="form-group"><input class="form-control mb-2" type="password" name="confirmPassword" placeholder="Confirm Password"></div>
-            <div class="form-group"><button class="btn btn-primary btn-block mt-2 ml-2" type="submit">Register</button></div></form>
-    </div>
- {% comment %} Display Messages {% endcomment %}
-          {% if messages %}
-          <div class="col-12">
-            {% for message in messages %}
-              {% if message.tags == "error" %}
-                <div class="alert alert-danger alert-dismissible fade show" role="alert" style="margin-top: 10px;">
-                  <b>{{ message }}</b>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-
-                </div>
-              {% endif %}
-            {% endfor %}
+      <div class="p-2 d-flex justify-content-center">
+        <img src="{% static 'dist/img/signup-text.svg' %}" alt="">
+      </div>
+      <hr class="mb-3">
+      <!-- First Name -->
+      <div class="form-group mb-3">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/person.svg' %}" alt=""></div>
           </div>
-          {% endif %}
+          <input
+            class="form-control mb-2"
+            type="text"
+            name="first_name"
+            placeholder="First Name"
+          />
+        </div>
+      </div>
+      <!-- Last Name -->
+      <div class="form-group mb-3">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/person.svg' %}" alt=""></div>
+          </div>
+          <input
+            class="form-control mb-2"
+            type="text"
+            name="last_name"
+            placeholder="Last Name"
+          />
+        </div>
+      </div>
+      <div class="form-group mb-3">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/envelope-at.svg' %}" alt=""></div>
+          </div>
+          <input
+            class="form-control mb-2"
+            type="email"
+            name="email"
+            placeholder="Email"
+          />
+        </div>
+      </div>
+      <div class="form-group mb-3">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/key.svg' %}" alt=""></div>
+          </div>
+          <input
+            class="form-control mb-2"
+            type="password"
+            name="password"
+            placeholder="Password"
+          />
+        </div>
+      </div>
+      <div class="form-group mb-2">
+        <div class="input-group input-group-lg">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><img src="{% static 'dist/img/key.svg' %}" alt=""></div>
+          </div>
+          <input
+            class="form-control mb-2"
+            type="password"
+            name="confirmPassword"
+            placeholder="Confirm Password"
+          />
+        </div>
+      </div>
+      <div class="form-group d-flex justify-content-center mb-3">
+        
+        <button class="btn btn-primary btn-block mt-2 ml-2" type="submit">
+          <img  src="{% static 'dist/img/check-circle.svg' %}" alt="">
+          Register
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
+{% comment %} Display Messages {% endcomment %} {% if messages %}
+<div class="col-12">
+  {% for message in messages %} {% if message.tags == "error" %}
+  <div
+    class="alert alert-danger alert-dismissible fade show"
+    role="alert"
+    style="margin-top: 10px"
+  >
+    <b>{{ message }}</b>
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
+  {% endif %} {% endfor %}
+</div>
+{% endif %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
 {% endblock content %}
